2012-09-28  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Allow cachegrind plug-in to access o.e.l.internal.valgrind.core.

2012-09-11  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Allow memcheck and valgrind plug-ins to access o.e.l.internal.valgrind.core.

2011-11-28 Otavio Pontes <obusatto@linux.vnet.ibm.com>

	* plugin.xml:
	Removing extension point related to ValgrindPreferencePage
	* src/org/eclipse/linuxtools/internal/valgrind/core/messages.properties:
	Removing extension point related to ValgrindPreferencePage

2011-09-29 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* META-INF/MANIFEST.MF: Require org.eclipse.linuxtools.tools.launch.core
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java:
	Using factories from org.eclipse.linuxtools.tools.launch.core to run
	valgrind command.

2011-09-28 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java:
	Removing dependency for ValgrindPreferencePage
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPlugin.java: 
	Removing dependency for ValgrindPreferencePage
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java:
	Removing this preference page. This page is not longer needed because we will be
	able to set the linuxtools PATH environment variable in Project Properties.

2011-10-18  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Hide internal package except from other Valgrind plug-ins.

2011-10-17  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #360950
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPlugin.java (initializeDefaultPreferences): Add
	future support for Windows.

2011-10-07  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java
		(ValgrindCoreParser): Handle output resulting from insufficient memory. BZ# 360225.
